--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ table {
   table-layout: fixed;
   width: 100%;
 }
-th{
+th {
   overflow: hidden;
 }
-td{
+td {
   word-wrap: break-word;
 }
 th,
@@ -49,8 +49,8 @@ th:first-letter {
   border-color: #adadad;
 }
 .multiselect-clear-filter {
-  border: none; 
-  border-width: 0; 
+  border: none;
+  border-width: 0;
   box-shadow: none;
 }
 .glyphicon {
@@ -96,4 +96,29 @@ th:first-letter {
 }
 hr.small {
   border: 0px;
+}
+
+.dropdown-icon {
+  display: inline-block;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: "";
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+
+/* Overwrites */
+.dropdown,
+.btn-group,
+.input-group {
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #000 !important;
+  background-color: #fff !important;
 }
