--- a/style.css
+++ b/style.css
@@ -5,24 +5,24 @@ body {
   padding: 10px;
   text-align: center;
 }
-table {
+.json-table-holder table {
   background-color: #fff;
   table-layout: fixed;
   width: 100%;
 }
-th {
+.json-table-holder th {
   overflow: hidden;
 }
-td {
+.json-table-holder td {
   word-wrap: break-word;
 }
-th,
-td {
+.json-table-holder th,
+.json-table-holder td {
   border-style: solid;
   border-width: 5px;
   border-color: #bcbcbc;
 }
-th:first-letter {
+.json-table-holder th:first-letter {
   text-transform: capitalize;
 }
 .row {
