--- a/style.css
+++ b/style.css
@@ -16,12 +16,14 @@ body {
 .json-table-holder td {
   word-wrap: break-word;
 }
+/*
 .json-table-holder th,
 .json-table-holder td {
   border-style: solid;
   border-width: 5px;
   border-color: #bcbcbc;
 }
+*/
 .json-table-holder th:first-letter {
   text-transform: capitalize;
 }
