--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
-body {
-  padding: 10px;
-}
-.header {
-  padding: 10px;
-  text-align: center;
-}
 .json-table-holder table {
   background-color: #fff;
   table-layout: fixed;
   width: 100%;
+  font-size: 0.8rem;
 }
 .json-table-holder th {
   overflow: hidden;
@@ -22,78 +16,18 @@ body {
   border-width: 5px;
   border-color: #bcbcbc;
 }
-.json-table-holder th:first-letter {
+
+.json-table-holder th span {
+  display: block;
+}
+.json-table-holder th span:first-letter {
   text-transform: capitalize;
 }
-.row {
+
+#filtHolder .row {
   margin-bottom: 20px;
 }
-.btn-default {
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
-}
-.btn-default:focus {
-  color: #333;
-  background-color: #e6e6e6;
-  border-color: #8c8c8c;
-}
-.btn-default:hover {
-  color: #333;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-.btn-default:active {
-  color: #333;
-  background-color: #e6e6e6;
-  border-color: #adadad;
-}
-.multiselect-clear-filter {
-  border: none;
-  border-width: 0;
-  box-shadow: none;
-}
-.glyphicon {
-  display: inline-block;
-  font: normal normal normal 14px/1 FontAwesome;
-  font-size: inherit;
-  font-family: "Font Awesome\ 5 Free";
-  font-weight: 900;
-  text-rendering: auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-.glyphicon-remove-circle:before {
-  content: "\f00d";
-}
-.dt-button.btn {
-  font-size: 14px;
-  padding: 6px 12px;
-  margin-bottom: 0;
 
-  display: inline-block;
-  text-decoration: none;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  cursor: pointer;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  color: #333;
-  background-color: #fff;
-  border-color: #ccc;
-}
-.dt-button.btn:hover,
-.dt-button.btn:focus {
-  color: #333;
-  text-decoration: none;
-}
 hr.small {
   border: 0px;
 }
@@ -109,6 +43,20 @@ hr.small {
   border-left: 0.3em solid transparent;
 }
 
+.glyphicon {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  font-family: "Font Awesome\ 5 Free";
+  font-weight: 900;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.glyphicon-remove-circle:before {
+  content: "\f00d";
+}
+
 /* Overwrites */
 .dropdown,
 .btn-group,
@@ -121,4 +69,17 @@ hr.small {
 .dropdown-item:active {
   color: #000 !important;
   background-color: #fff !important;
+}
+
+.multiselect-container > li > a > label > input[type="checkbox"] {
+  position: relative;
+}
+
+.multiselect-container {
+  transform: none !important;
+  padding: 5px !important;
+}
+
+div.dataTables_wrapper div.dataTables_filter input[type="checkbox"] {
+  margin-left: -20px !important;
 }
